--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   scrollable_positioned_list: ^0.2.3
   collection: ^1.15.0
   universal_file: ^1.0.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
