--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   collection: ^1.15.0
   universal_file: ^1.0.0
   cached_network_image: ^3.2.1
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
