--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  epubx: ^3.0.0
   equatable: ^2.0.3
   html: ^0.15.0
   flutter_html: ^3.0.0-alpha.2
@@ -19,7 +18,12 @@ dependencies:
   collection: ^1.15.0
   universal_file: ^1.0.0
   cached_network_image: ^3.2.1
-  flutter_svg: ^1.0.3
+  flutter_svg:
+    git: https://github.com/Sraq-Zit/flutter_svg.git
+  epubx:
+    git: https://github.com/Sraq-Zit/epubx.dart.git
+
+
 
 dev_dependencies:
   flutter_test:
